AC_PREREQ([2.69])

AC_INIT(hpl-ai, 2.3, hpl-ai@icl.utk.edu)
AC_CONFIG_SRCDIR([hpl-ai.h])
AC_CONFIG_HEADERS([hpl-ai-config.h])

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_INSTALL

AM_INIT_AUTOMAKE([subdir-objects])

AM_PROG_CC_STDC
AM_PROG_CC_C_O

AC_CHECK_HEADERS([sys/time.h])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
